RESOLVED FIXED228959
[WTF][PlayStation] REGRESSION(r280795) error: undefined symbol: WTF::logLevelString()
https://bugs.webkit.org/show_bug.cgi?id=228959
Summary [WTF][PlayStation] REGRESSION(r280795) error: undefined symbol: WTF::logLevel...
Stephan Szabo
Reported 2021-08-10 10:42:52 PDT
Related to bug 228937, however because the unix logging cpp didn't include LogInitialization.h, the export didn't happen.
Attachments
Patch (1.14 KB, patch)
2021-08-10 10:49 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2021-08-10 10:49:05 PDT
EWS
Comment 2 2021-08-10 14:53:20 PDT
Committed r280866 (240406@main): <https://commits.webkit.org/240406@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435273 [details].
Radar WebKit Bug Importer
Comment 3 2021-08-10 14:54:20 PDT
Note You need to log in before you can comment on or make changes to this bug.