[WTF][PlayStation] REGRESSION(r280795) error: undefined symbol: WTF::logLevelString() https://bugs.webkit.org/show_bug.cgi?id=228959

Reviewed by Fujii Hironori.

As per followup win fix, for declspec platforms, LoggingUnix needs
to include LogInitialization to get the export declaration.

* wtf/unix/LoggingUnix.cpp:


Canonical link: https://commits.webkit.org/240406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280866 268f45cc-cd09-0410-ab3c-d52691b4dbfc